 * Realm will now throw a RealmError when Realm's underlying storage engine encounters an unrecoverable error.
 * @Index annotation can also be applied to byte/short/int/long/boolean/Date now.
 * Fields with annotation @PrimaryKey are indexed automatically now.
 * Fixed a bug where RealmQuery objects are prematurely garbage collected.

0.81.1
 * Fixed memory leak causing Realm to never release Realm objects.

0.81
 * Introduced RealmModules for working with custom schemas in libraries and apps.
 * Introduced Realm.getDefaultInstance(), Realm.setDefaultInstance(RealmConfiguration) and Realm.getInstance(RealmConfiguration).
 * Deprecated most constructors. They have been been replaced by Realm.getInstance(RealmConfiguration) and Realm.getDefaultInstance().
 * Deprecated Realm.migrateRealmAtPath(). It has been replaced by Realm.migrateRealm(RealmConfiguration).
 * Deprecated Realm.deleteFile(). It has been replaced by Realm.deleteRealm(RealmConfiguration).
 * Deprecated Realm.compactFile(). It has been replaced by Realm.compactRealm(RealmConfiguration).
 * RealmList.add(), RealmList.addAt() and RealmList.set() now copy standalone objects transparently into Realm.
 * Realm now works with Kotlin (M12+). (thanks @cypressious)
 * Fixed a performance regression introduced in 0.80.3 occurring during the validation of the Realm schema.
 * Added a check to give a better error message when null is used as value for a primary key. 
 * Fixed unchecked cast warnings when building with Realm.
 * Cleaned up examples (remove old test project).
 * Added checking for missing generic type in RealmList fields in annotation processor.

0.80.3
 * Calling Realm.copyToRealmOrUpdate() with an object with a null primary key now throws a proper exception.
 * Fixed a bug making it impossible to open Realms created by Realm-Cocoa if a model had a primary key defined.
 * Trying to using Realm.copyToRealmOrUpdate() with an object with a null primary key now throws a proper exception.