@@ -6,6 +6,7 @@
  * @Index annotation can also be applied to byte/short/int/long/boolean/Date now.
  * Fields with annotation @PrimaryKey are indexed automatically now.
  * Fixed a bug where RealmQuery objects are prematurely garbage collected.
+ * Removed RealmQuery.between() for link queries. 
 
 0.81.1
  * Fixed memory leak causing Realm to never release Realm objects.
